--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -41,7 +41,9 @@
    "source": [
     "# Set this to true to produce only the catalogue for CIGALE and to false \n",
     "# to continue and merge the CIGALE results too.\n",
-    "FIRST_RUN_FOR_CIGALE = True\n",
+    "MAKE_CIGALE = False\n",
+    "MAKE_FiNAL = True\n",
+    "\n",
     "\n",
     "SUFFIX = '20190207'"
    ]
@@ -1884,7 +1886,7 @@
     }
    ],
    "source": [
-    "if FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_CIGALE:\n",
     "    \n",
     "    for tile in file_list:\n",
     "        \n",
@@ -1974,10 +1976,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
     "    # Cigale outputs\n",
-    "    cigale = Table.read(\"../../dmu28/dmu28_XMM-LSS/data/HELP_final_results.fits\")\n",
+    "    cigale = Table.read(\"../../dmu28/dmu28_XMM-LSS/data/zphot/HELP_final_results.fits\")\n",
     "    cigale['id'].name = \"help_id\"\n",
     "\n",
     "    # We convert the various Chi2 and threshold to flags\n",
@@ -2022,94 +2024,80 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "if MAKE_FINAL:\n",
     "\n",
-    "    merged_table = join(merged_table, cigale, join_type='left')\n",
+    "    for tile in file_list:\n",
+    "        \n",
+    "        file_num = tile.split('_')[6].split('.')[0]\n",
+    "        ml = Table.read(tile)\n",
+    "        ml.meta = None\n",
+    "        \n",
+    "        \n",
     "\n",
-    "    # Fill values\n",
-    "    for col in cigale.colnames:\n",
-    "        if col.startswith(\"cigale_\"):\n",
-    "            merged_table[col].fill_value = np.nan\n",
-    "        elif col.startswith(\"flag_\"):\n",
-    "            merged_table[col].fill_value = -1\n",
-    "    merged_table = merged_table.filled()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Sorting columns\n",
+    "        ml['zspec'][ml['zspec'] < 0] = np.nan  # -99 used for missing values\n",
+    "        \n",
+    "        \n",
     "\n",
-    "We sort the columns by increasing band wavelength."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
-    "\n",
-    "    bands = [col[2:] for col in merged_table.colnames\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        #ADD in XID+ merging here\n",
+    "        merged_table = help_merge(ml, xid_mips24)\n",
+    "        merged_table = help_merge(merged_table, xid_pacs)\n",
+    "        merged_table = help_merge(merged_table, xid_spire)\n",
+    "        merged_table = help_merge(merged_table, cigale)\n",
+    "    \n",
+    "        #photo-z merging\n",
+    "        merged_table = help_merge(merged_table, photoz)\n",
+    "        \n",
+    "        #flag merging\n",
+    "        flags = Table.read(\"../../dmu6/dmu6_v_XMM-LSS/data/tiles/xmm-lss_20180504_{}_flags.fits\".format(file_num))\n",
+    "        for col in flags.colnames:\n",
+    "            if 'flag' in col:\n",
+    "                try:\n",
+    "                    merged_table.remove_column(col)\n",
+    "                except KeyError:\n",
+    "                    print(\"Column: {} not in masterlist.\".format(col))\n",
+    "        \n",
+    "        merged_table = join(merged_table, flags, join_type='left')\n",
+    "        # Fill values\n",
+    "        for col in merged_table.colnames:\n",
+    "            if 'flag' in col:\n",
+    "                merged_table[col].fill_value = False\n",
+    "        merged_table = merged_table.filled()\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "        # Sorting the columns\n",
+    "        bands_tot = [col[2:] for col in merged_table.colnames\n",
     "             if col.startswith('f_') and not col.startswith('f_ap')]\n",
-    "    bands.sort(key=lambda x: filter_mean_lambda[x])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
+    "        bands_ap = [col[5:] for col in merged_table.colnames\n",
+    "             if col.startswith('f_ap_') ]\n",
+    "        bands = list(set(bands_tot) | set(bands_ap))\n",
+    "        bands.sort(key=lambda x: filter_mean_lambda[x])\n",
+    "    \n",
+    "        columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', \n",
+    "                   'zspec']\n",
+    "        for band in bands:\n",
+    "            for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
+    "                            'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
+    "                            'flag_{}']:\n",
+    "                colname = col_tpl.format(band)\n",
+    "                if colname in merged_table.colnames:\n",
+    "                    columns.append(colname)\n",
+    "        columns += ['stellarity', 'stellarity_origin', 'flag_cleaned',\n",
+    "                    'flag_merged', 'flag_gaia', 'flag_optnir_obs',\n",
+    "                    'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
+    "    \n",
     "\n",
-    "    columns = ['help_id', 'field', 'ra', 'dec', 'hp_idx', 'ebv', 'redshift', 'zspec']\n",
-    "    for band in bands:\n",
-    "        for col_tpl in ['f_{}', 'ferr_{}', 'f_ap_{}', 'ferr_ap_{}',\n",
-    "                        'm_{}', 'merr_{}', 'm_ap_{}', 'merr_ap_{}',\n",
-    "                        'flag_{}']:\n",
-    "            colname = col_tpl.format(band)\n",
-    "            if colname in merged_table.colnames:\n",
-    "                columns.append(colname)\n",
-    "    columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr', 'cigale_sfr_err',\n",
-    "                'cigale_dustlumin', 'cigale_dustlumin_err', 'cigale_dustlumin_ironly', \n",
-    "                'cigale_dustlumin_ironly_err', 'flag_cigale', 'flag_cigale_opt', \n",
-    "                'flag_cigale_ir', 'flag_cigale_ironly', 'stellarity', \n",
-    "                'stellarity_origin', 'flag_cleaned', 'flag_merged', 'flag_gaia', \n",
-    "                'flag_optnir_obs', 'flag_optnir_det', 'zspec_qual', \n",
-    "                'zspec_association_flag']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
-    "\n",
-    "    # Check that we did not forget any column\n",
-    "    assert set(columns) == set(merged_table.colnames)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Saving"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not FIRST_RUN_FOR_CIGALE:\n",
-    "    merged_table = add_column_meta(merged_table, '../columns.yml')\n",
-    "    merged_table[columns].write(\"data/XMM-LSS.fits\")"
+    "        # Check that we did not forget any column\n",
+    "        print( set(columns) - set(merged_table.colnames))\n",
+    "        print(  set(merged_table.colnames) - set(columns) )\n",
+    "    \n",
+    "        merged_table = add_column_meta(merged_table, '../columns.yml')\n",
+    "        merged_table[columns].write(\"data/tiles/xmm-lss_{}_{}.fits\".format(SUFFIX, file_num), overwrite=True)"
    ]
   }
  ],
@@ -2130,7 +2118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
