--- a/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
+++ b/dmu32/dmu32_XMM-LSS/XMM-LSS_catalogue_merging.ipynb
@@ -2087,7 +2087,11 @@
     "                colname = col_tpl.format(band)\n",
     "                if colname in merged_table.colnames:\n",
     "                    columns.append(colname)\n",
-    "        columns += ['stellarity', 'stellarity_origin', 'flag_cleaned',\n",
+    "        columns += ['cigale_mstar', 'cigale_mstar_err', 'cigale_sfr',\n",
+    "                    'cigale_sfr_err', 'cigale_dustlumin', 'cigale_dustlumin_err', \n",
+    "                    'cigale_dustlumin_ironly', 'cigale_dustlumin_ironly_err', \n",
+    "                    'flag_cigale', 'flag_cigale_opt', 'flag_cigale_ir', \n",
+    "                    'flag_cigale_ironly','stellarity', 'stellarity_origin', 'flag_cleaned',\n",
     "                    'flag_merged', 'flag_gaia', 'flag_optnir_obs',\n",
     "                    'flag_optnir_det', 'zspec_qual', 'zspec_association_flag']\n",
     "    \n",
