--- a/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
+++ b/dmu32/dmu32_ELAIS-N2/ELAIS-N2_catalogue_merging.ipynb
@@ -23,9 +23,9 @@
      "output_type": "stream",
      "text": [
       "This notebook was run with herschelhelp_internal version: \n",
-      "708e28f (Tue May 8 18:05:21 2018 +0100)\n",
+      "017bb1e (Mon Jun 18 14:58:59 2018 +0100)\n",
       "This notebook was executed on: \n",
-      "2018-06-01 11:50:19.202242\n"
+      "2019-09-20 18:37:18.689772\n"
      ]
     }
    ],
@@ -240,7 +240,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -399,11 +399,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n",
+      "set()\n"
+     ]
+    }
+   ],
    "source": [
     "if MAKE_CIGALE_INPUT:\n",
     "    \n",
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -529,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -544,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -571,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -592,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -621,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
