--- a/dmu32/dmu32_SPIRE-NEP/SPIRE-NEP_catalogue_merging.ipynb
+++ b/dmu32/dmu32_SPIRE-NEP/SPIRE-NEP_catalogue_merging.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "# Photo-z\n",
     "\n",
-    "photoz = Table.read(\"../../dmu24/dmu24_SPIRE-NEP/data/ELAIS-N2_DESI-DR8_Zou_et_al_2019_photo_z_withhelp_id.fits\")\n",
+    "photoz = Table.read(\"../../dmu24/dmu24_SPIRE-NEP/data/SPIRE-NEP_DESI-DR8_Zou_et_al_2019_photo_z_withhelp_id.fits\")\n",
     "photoz.meta = None\n",
     "\n",
     "photoz = photoz['help_id', 'photo_z']\n",
@@ -215,7 +215,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/herschelhelp_internal/lib/python3.6/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
+      "/opt/pyenv/versions/3.7.2/lib/python3.7/site-packages/astropy/table/column.py:965: RuntimeWarning: invalid value encountered in less\n",
       "  return getattr(self.data, op)(other)\n"
      ]
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -382,7 +382,12 @@
      "output_type": "stream",
      "text": [
       "set()\n",
-      "{'flag_gpc1_i_ap', 'flag_gpc1_z_ap', 'flag_gpc1_g_ap', 'flag_gpc1_r_ap', 'flag_gpc1_y_ap'}\n"
+      "{'flag_gpc1_z_ap', 'flag_gpc1_i_ap', 'flag_gpc1_g_ap', 'flag_gpc1_r_ap', 'flag_gpc1_y_ap'}\n",
+      "Column flag_gpc1_g_ap has missing data\n",
+      "Column flag_gpc1_r_ap has missing data\n",
+      "Column flag_gpc1_i_ap has missing data\n",
+      "Column flag_gpc1_z_ap has missing data\n",
+      "Column flag_gpc1_y_ap has missing data\n"
      ]
     }
    ],
@@ -619,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
