--- a/dmu24/dmu24_SPIRE-NEP/Make_cat_from_DESI_LagacyDR8.ipynb
+++ b/dmu24/dmu24_SPIRE-NEP/Make_cat_from_DESI_LagacyDR8.ipynb
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml = Table.read('../../dmu1/dmu1_ml_SPIRE-NEP/data/master_catalogue_spire-nep_20180220.fits')"
+    "ml = Table.read('../../dmu1/dmu1_ml_SPIRE-NEP/data/master_catalogue_spire-nep_20180220.fits')['help_id', 'ra', 'dec']"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
