--- a/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_AKARI-SEP/CIGALE_catalogue_preparation.ipynb
@@ -80,12 +80,12 @@
    },
    "outputs": [],
    "source": [
-    "# good = {}\n",
-    "# for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
-    "#     good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
-    "#                                    ~master_catalogue['flag_{}'.format(band)])\n",
-    "#     good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
-    "#                               master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
+    "good = {}\n",
+    "for band in ['pacs_green', 'pacs_red', 'spire_250', 'spire_350', 'spire_500']:\n",
+    "    good[band] = (~np.isnan(master_catalogue['f_{}'.format(band)]) & \n",
+    "                                   ~master_catalogue['flag_{}'.format(band)])\n",
+    "    good[band][good[band]] &= (master_catalogue[good[band]]['f_{}'.format(band)] /\n",
+    "                              master_catalogue[good[band]]['ferr_{}'.format(band)] >= 2)"
    ]
   },
   {
@@ -103,7 +103,7 @@
    },
    "outputs": [],
    "source": [
-    "# combined_good = np.sum(list(good.values()), axis=0) >= 2"
+    "combined_good = np.sum(list(good.values()), axis=0) >= 2"
    ]
   },
   {
@@ -114,7 +114,7 @@
    },
    "outputs": [],
    "source": [
-    "# print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
+    "print(\"Number of good sources: {}\".format(np.sum(combined_good)))"
    ]
   },
   {
@@ -145,8 +145,7 @@
    },
    "outputs": [],
    "source": [
-    "# best_catalogue = master_catalogue[combined_good].copy()\n",
-    "best_catalogue = master_catalogue[optnir].copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()\n"
    ]
   },
   {
@@ -239,7 +238,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/AKARI-SEP_cigale_optnir_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/AKARI-SEP_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -257,7 +256,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue = master_catalogue[optnir].copy()"
+    "best_catalogue = master_catalogue[combined_good].copy()"
    ]
   },
   {
@@ -349,7 +348,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/AKARI-SEP_cigale_optnir_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
+    "best_catalogue.write(\"data_tmp/AKARI-SEP_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
@@ -370,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
